# SoapySDR

./: CMakeLists.txt
java/: CMakeLists.txt  SoapySDR.i
lib/: Modules.in.cpp
